2007-06-28  Kamil Madac

	* src/gnome-cmd-xfer-progress-win.c:
	Show copied bytes instead of percentage during file transfer

2007-06-26  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-dir.h:
	Fixed crash when creating absolute dir on SMB share

2007-06-26  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.cc:
	Replacing obsoleted gnome_pixmap_*() with gdk_pixbuf_* ()

2007-06-22  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.cc:
	Fixed bug #447415 (gcmd can't launch executables)

2007-06-16  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-mkdir-dialog.cc:
	Fixed problem when creating ~/dir

2007-06-16  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file.h:
	* src/tags/gnome-cmd-tags.cc:
	* src/tags/gnome-cmd-tags.h:
	Initial framework for new metatags implementation
	(replacing GHashTable with std::map<GnomeCmdTag,std::string>)

2007-06-12  Piotr Eljasiak  <epiotr@use.pl>

	* data/gnome-commander.spec.in:
	Minor tweaking with library versioning

2007-06-12  Damien Carbery  <damien.carbery@sun.com>

	* configure.in:
	* libgcmd/gnome-cmd-file-info.c:
	* libgcmd/Makefile.am:
	* plugins/cvs/Makefile.am:
	* plugins/fileroller/Makefile.am:
	* plugins/test/Makefile.am:
	* plugins/test/test-plugin.c:
	* src/dict.h:
	* src/filter.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-types.h:
	* src/Makefile.am:
	* src/utils.cc:
	* src/libgviewer/Makefile.am:
	* src/libgviewer/viewer-widget.c::
	* src/tags/id3lib/Makefile.am:
	* src/tags/Makefile.am:
	* tests/gviewer/datapresentation.c:
	* tests/gviewer/imagerenderer.c:
	* tests/gviewer/Makefile.am:
	* tests/gviewer/textrenderer.c:
	* tests/gviewer/viewerwidget.c:
	Fixed build errors for Solaris

2007-06-10  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-props-dialog.c:
	Added 'Metadata' tab to file-props dlg

2007-06-09  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in: Bumped version to 1.2.5


